add_executable(ExpStaticPoly CRTP/informal_algorithm.cpp CRTP/informal_base.h)
add_executable(ErrorPronePoly CRTP/informal_algorithm2.cpp CRTP/informal_base2.h)
add_executable(FormalStaticPoly CRTP/formal_algorithm.cpp CRTP/formal_algorithm.cpp)
add_executable(ObjectCounter CRTP/object_counter.h CRTP/instance_object_counter.cpp)