find_package(Boost REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(MetaFunction MetaFunction.cpp)
add_executable(MetaFunctionForward MetaFunctionForward.cpp)
add_executable(MetaFunctionUtilDemo MetaFunctionTool.cpp MetaFunctionTool.h)
add_executable(TypeTraitsUsage TypeTraitsUsage.cpp MetaFunctionTool.h)
add_executable(TypeTraitsUsageProperty TypeTraitsUsageProperty.cpp MetaFunctionTool.h)
add_executable(MetaDataRelation MetaDataRelation.cpp MetaFunctionTool.h)
add_executable(MetaDataComputation MetaDataComputation.cpp MetaFunctionTool.h)
add_executable(MetaDataComputationOthers MetaDataComputationOthers.cpp MetaFunctionTool.h)
add_executable(ParseFunctionMetaData ParseFunctionMetaData.cpp MetaFunctionTool.h)

